Phase 2: Vant UI重构 + 安全修复
UI重构:
- 4个前端页面用Vant 4 + Vue 3重写
- 响应式适配所有手机尺寸
- 主题色 #ff6b35 橙白风格

安全修复:
- bcrypt密码哈希(兼容旧SHA-256自动升级)
- JWT密钥环境变量化(删除硬编码默认值)
- express-rate-limit速率限制
- helmet安全头
- CORS收紧
- 输入消毒(xss)

--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "@supabase/supabase-js": "^2.96.0",
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "express": "^4.21.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "postgres": "^3.4.8",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.21",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.19.0",
